--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Logo Start -->
         <div class="logo">
           <!-- Your Logo Here -->
-          <img src="img/edvard-munch-color.svg" alt="UNDER THE INFLUENCER - female-led, lgbtq+ feature film coming soon">
+          <img src="">
         </div>
         <!-- Logo End -->
 
@@ -246,8 +246,8 @@
 
                 <!-- Popup Title Start -->
                 <div class="popup-title column">
-                  <p class="popup-title__title text-light">We. Are. Going. LIVE.</p>
-                  <p class="popup-title__text text-light-base">Subscribe for updates about the film and forthcoming digital art collection launch.</p>
+                  <p class="popup-title__title text-light">Going LIVE.</p>
+                  <p class="popup-title__text text-light-base">Subscribe for updates about the film & forthcoming digital art collection launch.</p>
                 </div>
                 <!-- Popup Title End -->
 
