--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <!-- Background Effect Start -->
                   <!-- local video background -->
                   <div class="video-background">
-                    <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="http://via.placeholder.com/1920x1280">
+                    <video id="main-video" preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/UtI_Website_BG_VideoPlaceholder_1920x1280.jpg">
                       <source type="video/mp4" src="video/video.mp4">
                       <source type="video/webm" src="video/video.webm">
                       <source type="video/ogv" src="video/video.ogv">
